backend redesign w celery/redis etc
created timing decorator for logs

refactored cytoscape into smaller modules

extended logging timers to api

fix copy/paste error

fix incorrect names

switch from print/warnings to loguru

switching to loguru

cherry pick files from steve/bak/enhance-195-baserow-auth

updated logging and timing

loguru and timing

wip

field ids captured once only

handle empty sitrep dict

open quarto external links in separate tab/window

upgrade dash

adding logging to stores

tidying

updating pre-commit

added a dev compose.yml file

minor updates setting up again

wip: setting up celery for background callbacks

adding in flower

vscode+docker compose debug setup

align compose.dev and compose

start flask independently / abstracted config

extract flower port config

updated API with ping endpoints for testing celery

mwe using celery-redis to cache

downgrade to 3.10.10

vscode debugger working with docker

data preloads if needed on app launch

nested hello world app back in original layout structure

added in perrt updates

added in demo/scratch module

preserve bed id to use in patching

preserving bed id across all endpoints

fix celery flower and beat config in compose

added redis insight for monitoring

re-implemented sitrep with caching

include params in cache_keys to ensure unique

tidier error handling

debuggin

rollback xgboost to 1.5.0

3 fixes

remove cache from compose/fix stupid type check/remove addons from beat_schedule

fix type error by forcing response code to str

adding back in ed/electives

use hospital visit ids rather than csn for preds

fix mock data

added vitals to inspector

first pass ag-grid for ED

wip

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,5 @@
 # All variables are mandatory
+DEBUG=1 # 1=True
 
 # Docker Configuration
 HYLODE_UID=
@@ -6,6 +7,7 @@ API_PORT=
 WEB_PORT=
 BASEROW_PORT=
 CACHE_PORT=
+FLOWER_PORT=
 
 # API Server Configuration
 API_STAR_DSN=postgresql+psycopg2://[username]:[password]@[host]:[port]/uds
@@ -15,14 +17,17 @@ API_CLARITY_DSN=mssql+pyodbc://[username]:[password]@[host]:[port]/clarity_repor
 API_BASEROW_URL=
 API_BASEROW_EMAIL=hyui@nhs.net
 API_BASEROW_PASSWORD=
+API_BASEROW_APPLICATION_NAME=hyui
+API_BASEROW_USER_NAME=hyui
+
 
 # Original hycastle and hymind on GAE07 5006/5007 respectively
 # Current hycastle and hymind on GAE08 5207/5208 respectively
 API_HYCASTLE_URL=
 API_HYMIND_URL=
 API_TOWERMAIL_URL=
-API_ELECTIVES_TAP_URL=
-API_EMERGENCY_TAP_URL=
+# Hylode-Bot : slack API hook
+API_SLACK_LOG_WEBHOOK=https://hooks.slack.com/services/foo/bar/baz
 
 API_ECHO_SQL=False
 
@@ -32,6 +37,8 @@ WEB_PASSWORD=
 WEB_SECRET_KEY=
 WEB_API_URL=
 WEB_BASEROW_PUBLIC_URL=
+# Hylode-Bot : slack web hook
+WEB_SLACK_LOG_WEBHOOK=https://hooks.slack.com/services/foo/bar/baz
 
 # Live config
 # WEB_API_URL=http://cache:8000
@@ -48,3 +55,11 @@ BASEROW_PASSWORD=
 # Baserow config for building defaults
 DB_STAR_DSN=
 DB_CABOODLE_DSN=
+
+# CELERY
+# BE CAREFUL! These same env variables are used by baserow and conflict
+# CELERY_BROKER_URL=redis://redis:6379/0
+# CELERY_RESULT_BACKEND=redis://redis:6379/0
+# HENCE ADD A PREFIX
+CELERY_DASH_BROKER_URL=redis://redis:6379/0
+CELERY_DASH_RESULT_BACKEND=redis://redis:6379/0
