--- a/docs/_quarto.yml
+++ b/docs/_quarto.yml
@@ -61,3 +61,5 @@ format:
     include-in-header:
       text: |
         <script defer data-domain="uclhal.org" src="https://plausible.io/js/script.js"></script>
+    link-external-icon: true
+    link-external-newwindow: true
