--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,9 +1,11 @@
 # See https://pre-commit.com for more information
 # See https://pre-commit.com/hooks.html for more hooks
 # https://pre-commit.com/#pre-commit-configyaml---top-level
+default_language_version:
+    python: python3
 repos:
   - repo: https://github.com/kynan/nbstripout
-    rev: 0.4.0
+    rev: 0.6.1
     hooks:
       - id: nbstripout
         name: nbstripout - Strip outputs from notebooks (auto-fixes)
@@ -11,7 +13,7 @@ repos:
           - --extra-keys
           - "metadata.colab metadata.kernelspec cell.metadata.colab cell.metadata.executionInfo cell.metadata.id cell.metadata.outputId"
   - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v4.0.1
+    rev: v4.4.0
     hooks:
       - id: check-added-large-files
         name: Check for files larger than 5 MB
@@ -22,31 +24,31 @@ repos:
       - id: trailing-whitespace
         name: Check for trailing whitespaces (auto-fixes)
   - repo: https://github.com/pycqa/isort
-    rev: 5.8.0
+    rev: 5.12.0
     hooks:
       - id: isort
         name: isort - Sort Python imports (auto-fixes)
         types: [ cython, pyi, python ]
         args: [ "--profile", "black", "--filter-files" ]
   - repo: https://github.com/psf/black
-    rev: 22.10.0
+    rev: 23.3.0
     hooks:
       - id: black
         name: black - consistent Python code formatting (auto-fixes)
-        language_version: python3.10
+#        language_version: python3.10
   - repo: https://github.com/pycqa/flake8
-    rev: 5.0.4
+    rev: 6.0.0
     hooks:
       - id: flake8
         name: flake8 - Python linting
         exclude: ^try
   - repo: https://github.com/pre-commit/mirrors-mypy
-    rev: "v0.982"
+    rev: "v1.2.0"
     hooks:
       - id: mypy
         additional_dependencies: ["types-requests"]
   - repo: https://github.com/nbQA-dev/nbQA
-    rev: 1.3.1
+    rev: 1.7.0
     hooks:
       - id: nbqa-isort
         name: nbqa-isort - Sort Python imports (notebooks; auto-fixes)
@@ -61,7 +63,7 @@ repos:
       #  name: nbqa-flake8 - Python linting (notebooks)
       #  additional_dependencies: [ flake8==3.9.2 ]
   - repo: https://github.com/Yelp/detect-secrets
-    rev: v1.0.3
+    rev: v1.4.0
     hooks:
       - id: detect-secrets
         name: detect-secrets - Detect secrets in staged code
