--- a/api/pyproject.toml
+++ b/api/pyproject.toml
@@ -6,9 +6,12 @@ build-backend = "setuptools.build_meta"
 name = "hyui-api"
 version = "0.0.1"
 dependencies = [
+    "loguru == 0.6.0",
+    "notifiers == 1.3.3",
     "hyui-models",
     "arrow == 1.2.3",
     "fastapi[all] == 0.85.0",
+    "fastapi-utils==0.2.1",
     "pandas == 1.5.1",
     "pyodbc == 4.0.35",
     "psycopg2-binary == 2.9.5",
@@ -18,7 +21,8 @@ dependencies = [
     "uvicorn[standard] == 0.18.3",
     "scikit-learn == 1.1.3",
     "imbalanced-learn == 0.10.1",
-    "category-encoders == 2.6.0"
+    "category-encoders == 2.6.0",
+    "xgboost == 1.5.0",
 ]
 
 [project.optional-dependencies]
