added grafana+prometheus for monitoring

--- a/api/pyproject.toml
+++ b/api/pyproject.toml
@@ -10,6 +10,7 @@ dependencies = [
     "arrow == 1.2.3",
     "fastapi[all] == 0.85.0",
     "pandas == 1.5.1",
+    "prometheus-fastapi-instrumentator == 5.11.0",
     "pyodbc == 4.0.35",
     "psycopg2-binary == 2.9.5",
     "pydantic == 1.10.2",
