--- a/api/pyproject.toml
+++ b/api/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
     "hyui-models",
     "arrow == 1.2.3",
     "fastapi[all] == 0.85.0",
+    "fastapi-utils==0.2.1",
     "pandas == 1.5.1",
     "pyodbc == 4.0.35",
     "psycopg2-binary == 2.9.5",
