updated .env example

--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,8 @@ API_PORT=
 WEB_PORT=
 BASEROW_PORT=
 CACHE_PORT=
+PROMETHEUS_PORT=
+GRAFANA_PORT=
 
 # API Server Configuration
 API_STAR_DSN=postgresql+psycopg2://[username]:[password]@[host]:[port]/uds
