--- a/api/pyproject.toml
+++ b/api/pyproject.toml
@@ -19,7 +19,8 @@ dependencies = [
     "uvicorn[standard] == 0.18.3",
     "scikit-learn == 1.1.3",
     "imbalanced-learn == 0.10.1",
-    "category-encoders == 2.6.0"
+    "category-encoders == 2.6.0",
+    "xgboost == 1.7.4"
 ]
 
 [project.optional-dependencies]
