cherry pick files from steve/bak/enhance-195-baserow-auth

--- a/.env.example
+++ b/.env.example
@@ -15,6 +15,9 @@ API_CLARITY_DSN=mssql+pyodbc://[username]:[password]@[host]:[port]/clarity_repor
 API_BASEROW_URL=
 API_BASEROW_EMAIL=hyui@nhs.net
 API_BASEROW_PASSWORD=
+API_BASEROW_APPLICATION_NAME=hyui
+API_BASEROW_USER_NAME=hyui
+
 
 # Original hycastle and hymind on GAE07 5006/5007 respectively
 # Current hycastle and hymind on GAE08 5207/5208 respectively
