--- a/web/pyproject.toml
+++ b/web/pyproject.toml
@@ -9,7 +9,8 @@ dependencies = [
     "loguru == 0.6.0",
     "notifiers == 1.3.3",
     "hyui-models",
-    "dash[diskcache] == 2.7.1",
+    "dash[diskcache] == 2.9.0",
+    "orjson == 3.8.7",
     "dash-bootstrap-components == 1.2.1",
     "dash-mantine-components == 0.11.1",
     "dash-iconify == 0.1.2",
