Add electives and emergency tap urls to example env file

--- a/.env.example
+++ b/.env.example
@@ -21,6 +21,8 @@ API_BASEROW_PASSWORD=
 API_HYCASTLE_URL=
 API_HYMIND_URL=
 API_TOWERMAIL_URL=
+API_ELECTIVES_TAP_URL=
+API_EMERGENCY_TAP_URL=
 
 API_ECHO_SQL=False
 
