wip: setting up celery for background callbacks

--- a/.gitignore
+++ b/.gitignore
@@ -938,3 +938,4 @@ api/src/api/electives/deploy/*
 # PACU dashboard
 web/src/web/assets/pacu_dashboard.html
 web/src/web/assets/pqip_dashboard.html
+.env.dev
