--- a/web/pyproject.toml
+++ b/web/pyproject.toml
@@ -6,23 +6,27 @@ build-backend = "setuptools.build_meta"
 name = "hyui-web"
 version = "0.0.1"
 dependencies = [
-    "loguru == 0.6.0",
-    "notifiers == 1.3.3",
-    "hyui-models",
-    "dash[diskcache] >= 2.9.0",
-    "orjson == 3.8.7",
-    "dash-bootstrap-components >= 1.2.1",
-    "dash-mantine-components >= 0.11.1",
-    "dash-iconify >= 0.1.2",
-    "dash-cytoscape >= 0.3.0",
-    "dash-daq >= 0.5.0",
     "Flask == 2.2.2",
     "Flask-Caching == 2.0.1",
     "Flask-Login == 0.6.2",
+    "celery~=5.2.7",
+    "dash-bootstrap-components >= 1.2.1",
+    "dash-cytoscape >= 0.3.0",
+    "dash-daq >= 0.5.0",
+    "dash-iconify >= 0.1.2",
+    "dash-mantine-components >= 0.11.1",
+    "dash[diskcache] >= 2.9.0",
+    "flower~=1.2.0",
     "gunicorn == 20.1.0",
+    "hyui-models",
+    "loguru == 0.6.0",
+    "notifiers == 1.3.3",
+    "orjson == 3.8.7",
     "pandas == 1.5.1",
     "pydantic == 1.10.2",
-    "requests == 2.28.1"
+    "redis~=4.5.4",
+    "requests == 2.28.1",
+    "watchfiles~=0.19.0",
 ]
 
 [project.optional-dependencies]
