--- a/compose.dev.yml
+++ b/compose.dev.yml
@@ -24,15 +24,20 @@ services:
 
   web:
     build:
-      dockerfile: docker/web/Dockerfile
+      dockerfile: docker/web/Dockerfile.dev
       args:
         <<: *build-args-common
     environment:
       <<: *proxy-common
+    # use cmd rather than entrypoint in Dockerfile.dev and then override here
+    command: ["sh", "-c", "pip install debugpy -t /tmp && python /tmp/debugpy --wait-for-client --listen 0.0.0.0:5678 -m web.app"]
     env_file: .env.dev
     ports:
-      - ${WEB_PORT}:8000
+      - ${WEB_PORT}:8300 # switch from 8000 (exposed by gunicorn + app.server) to 8300 which is the dev port
+      - 5678:5678  # vscode debugpy attach port
+    # add in a volumes section
     volumes:
+    # attach as bind mounts so you can edit the code whilst the container still runs
       - ./web/src/web:/app/web
       - ./models/src/models:/app/models
     depends_on:
@@ -78,6 +83,25 @@ services:
     networks:
       - hyui
 
+  celery_flower:
+    build:
+      dockerfile: docker/celery/Dockerfile
+      args:
+        <<: *build-args-common
+    environment:
+      <<: *proxy-common
+    command: /app/start-flower
+    ports:
+      - "8304:5555"
+    env_file:
+      - .env.dev
+    depends_on:
+      - redis
+      - celery_worker
+    networks:
+      - hyui
+
+
 #  cache:
 #    build:
 #      dockerfile: docker/cache/Dockerfile
@@ -95,12 +119,13 @@ services:
 #      - hyui
 
   baserow:
-    image: baserow/baserow:1.13.1
+    image: baserow/baserow:1.16.0
     environment:
       <<: *proxy-common
     env_file: .env.dev
     ports:
       - ${BASEROW_PORT}:80
+      - 8443:443
     networks:
       - hyui
     volumes:
