align compose.dev and compose

--- a/.env.example
+++ b/.env.example
@@ -53,3 +53,11 @@ BASEROW_PASSWORD=
 # Baserow config for building defaults
 DB_STAR_DSN=
 DB_CABOODLE_DSN=
+
+# CELERY
+# BE CAREFUL! These same env variables are used by baserow and conflict
+# CELERY_BROKER_URL=redis://redis:6379/0
+# CELERY_RESULT_BACKEND=redis://redis:6379/0
+# HENCE ADD A PREFIX
+CELERY_DASH_BROKER_URL=redis://redis:6379/0
+CELERY_DASH_RESULT_BACKEND=redis://redis:6379/0
