--- a/compose.yml
+++ b/compose.yml
@@ -41,6 +41,7 @@ services:
     depends_on:
       - baserow
       - api
+      - redis
       - cache
     healthcheck:
       test: ["CMD", "./refresh_cache.sh"]
@@ -48,6 +49,48 @@ services:
       timeout: 30s
       retries: 5
       start_period: 30s
+    networks:
+      - hyui
+
+  redis:
+    image: redis:7.0-alpine
+    environment:
+      <<: *proxy-common
+    ports:
+      - 6379:6379
+    networks:
+      - hyui
+
+  celery_worker:
+    build:
+      dockerfile: docker/celery/Dockerfile
+      args:
+        <<: *build-args-common
+    environment:
+      <<: *proxy-common
+    command: /app/start-worker
+    env_file:
+      - .env
+    depends_on:
+      - redis
+    networks:
+      - hyui
+
+  celery_flower:
+    build:
+      dockerfile: docker/celery/Dockerfile
+      args:
+        <<: *build-args-common
+    environment:
+      <<: *proxy-common
+    command: /app/start-flower
+    ports:
+      - "8304:5555"
+    env_file:
+      - .env
+    depends_on:
+      - redis
+      - celery_worker
     networks:
       - hyui
 
@@ -68,7 +111,7 @@ services:
       - hyui
 
   baserow:
-    image: baserow/baserow:1.13.1
+    image: baserow/baserow:1.16.0
     environment:
       <<: *proxy-common
     env_file: .env
