--- a/.env.example
+++ b/.env.example
@@ -7,6 +7,7 @@ API_PORT=
 WEB_PORT=
 BASEROW_PORT=
 CACHE_PORT=
+FLOWER_PORT=
 
 # API Server Configuration
 API_STAR_DSN=postgresql+psycopg2://[username]:[password]@[host]:[port]/uds
