--- a/compose.dev.yml
+++ b/compose.dev.yml
@@ -92,7 +92,7 @@ services:
       <<: *proxy-common
     command: /app/start-flower
     ports:
-      - "8304:5555"
+      - "${FLOWER_PORT}:5555"
     env_file:
       - .env.dev
     depends_on:
