--- a/web/pyproject.toml
+++ b/web/pyproject.toml
@@ -16,7 +16,9 @@ dependencies = [
     "dash-iconify >= 0.1.2",
     "dash-mantine-components >= 0.11.1",
     "dash[diskcache] >= 2.9.0",
+    "debugpy == 1.6.7",
     "flower~=1.2.0",
+    "gevent == 22.10.2",
     "gunicorn == 20.1.0",
     "hyui-models",
     "loguru == 0.6.0",
