--- a/compose.dev.yml
+++ b/compose.dev.yml
@@ -29,13 +29,11 @@ services:
         <<: *build-args-common
     environment:
       <<: *proxy-common
-    # use cmd rather than entrypoint in Dockerfile.dev and then override here
-    command: ["sh", "-c", "pip install debugpy -t /tmp && python /tmp/debugpy --wait-for-client --listen 0.0.0.0:5679 -m web.app"]
-    # command: ["sh", "-c", "pip install debugpy -t /tmp && python /tmp/debugpy --wait-for-client --listen 0.0.0.0:5679 -m gunicorn --bind 0.0.0.0:8000 web.app:server"]
+    # Using differnt environment variables
     env_file: .env.dev
     ports:
       - ${WEB_PORT}:8000 # switch from 8000 (exposed by gunicorn + app.server) to 8300 which is the dev port
-      - 5679:5679  # vscode debugpy attach port
+      - 10001:10001 # port on which debug.py listens
     # add in a volumes section
     volumes:
     # attach as bind mounts so you can edit the code whilst the container still runs
