--- a/api/pyproject.toml
+++ b/api/pyproject.toml
@@ -11,6 +11,7 @@ dependencies = [
     "hyui-models",
     "arrow == 1.2.3",
     "fastapi[all] == 0.85.0",
+    "fastapi-utils==0.2.1",
     "pandas == 1.5.1",
     "pyodbc == 4.0.35",
     "psycopg2-binary == 2.9.5",
@@ -20,7 +21,8 @@ dependencies = [
     "uvicorn[standard] == 0.18.3",
     "scikit-learn == 1.1.3",
     "imbalanced-learn == 0.10.1",
-    "category-encoders == 2.6.0"
+    "category-encoders == 2.6.0",
+    "xgboost == 1.7.4",
 ]
 
 [project.optional-dependencies]
