--- a/web/pyproject.toml
+++ b/web/pyproject.toml
@@ -15,7 +15,7 @@ dependencies = [
     "dash-daq >= 0.5.0",
     "dash-iconify >= 0.1.2",
     "dash-mantine-components >= 0.11.1",
-    "dash[diskcache] >= 2.9.0",
+    "dash[celery] >= 2.9.0",
     "debugpy == 1.6.7",
     "flower~=1.2.0",
     "gevent == 22.10.2",
