--- a/web/pyproject.toml
+++ b/web/pyproject.toml
@@ -10,6 +10,7 @@ dependencies = [
     "Flask-Caching == 2.0.1",
     "Flask-Login == 0.6.2",
     "celery~=5.2.7",
+    "dash-ag-grid ~= 2.0.0",
     "dash-bootstrap-components >= 1.2.1",
     "dash-cytoscape >= 0.3.0",
     "dash-daq >= 0.5.0",
