provide env vars for gh actions
use xom9ikk/dotenv@v2 to preload .env from .env.example

bump to 2.2

correct v to 2.2.0

further .env fixes

fix host names in .env.example

--- a/.env.example
+++ b/.env.example
@@ -1,42 +1,45 @@
 # All variables are mandatory
-DEBUG=1 # 1=True
+DEBUG=1
 
 # Docker Configuration
-HYLODE_UID=
-API_PORT=
-WEB_PORT=
-BASEROW_PORT=
-CACHE_PORT=
-FLOWER_PORT=
+HYLODE_UID=500
+API_PORT=8301
+WEB_PORT=8300
+BASEROW_PORT=8302
+CACHE_PORT=8303
+FLOWER_PORT=8304
+REDISINSIGHT_PORT=8309
 
 # API Server Configuration
-API_STAR_DSN=postgresql+psycopg2://[username]:[password]@[host]:[port]/uds
-API_CABOODLE_DSN=mssql+pyodbc://[username]:[password]@[host]:[port]/caboodle_report?driver=ODBC+Driver+18+for+SQL+Server&TrustServerCertificate=yes
-API_CLARITY_DSN=mssql+pyodbc://[username]:[password]@[host]:[port]/clarity_report?driver=ODBC+Driver+18+for+SQL+Server&TrustServerCertificate=yes
+API_STAR_DSN=postgresql+psycopg2://username:password@host
+API_CABOODLE_DSN=mssql+pyodbc://username:password@host
+API_CLARITY_DSN=mssql+pyodbc://username:password@host
 
-API_BASEROW_URL=
-API_BASEROW_EMAIL=hyui@nhs.net
-API_BASEROW_PASSWORD=
+API_BASEROW_URL=http://baserow:8302
+API_BASEROW_EMAIL=hyui@hyui.com
+API_BASEROW_PASSWORD=hyui
 API_BASEROW_APPLICATION_NAME=hyui
-API_BASEROW_USER_NAME=hyui
+API_BASEROW_USERNAME=hyui
 
 
 # Original hycastle and hymind on GAE07 5006/5007 respectively
 # Current hycastle and hymind on GAE08 5207/5208 respectively
-API_HYCASTLE_URL=
-API_HYMIND_URL=
-API_TOWERMAIL_URL=
+API_HYCASTLE_URL=http://hycastle:1234
+API_HYMIND_URL=http://hymind:1234
+API_TOWERMAIL_URL=http://towermail:1234
+API_ELECTIVES_TAP_URL=http://somehost:1234
+API_EMERGENCY_TAP_URL=http://somehost:1234
 # Hylode-Bot : slack API hook
 API_SLACK_LOG_WEBHOOK=https://hooks.slack.com/services/foo/bar/baz
 
 API_ECHO_SQL=False
 
 # Web Server Configuration
-WEB_USERNAME=
-WEB_PASSWORD=
-WEB_SECRET_KEY=
-WEB_API_URL=
-WEB_BASEROW_PUBLIC_URL=
+WEB_USERNAME=hyui
+WEB_PASSWORD=hyui
+WEB_SECRET_KEY=hyui
+WEB_API_URL=http://api:8000
+WEB_BASEROW_PUBLIC_URL=http://myhost:8302
 # Hylode-Bot : slack web hook
 WEB_SLACK_LOG_WEBHOOK=https://hooks.slack.com/services/foo/bar/baz
 
@@ -47,19 +50,27 @@ WEB_SLACK_LOG_WEBHOOK=https://hooks.slack.com/services/foo/bar/baz
 #WEB_API_URL=http://cache:8000/mock
 
 # Baserow Configuration
-BASEROW_PUBLIC_URL=
+# =================================================================
+BASEROW_PUBLIC_URL=http://myhost:8302
 BASEROW_EXTRA_ALLOWED_HOSTS=host.docker.internal,baserow
-BASEROW_EMAIL=
-BASEROW_USERNAME=
-BASEROW_PASSWORD=
+BASEROW_EMAIL=hyui@example.com
+BASEROW_USERNAME=hyui
+BASEROW_PASSWORD=hyui
 # Baserow config for building defaults
-DB_STAR_DSN=
-DB_CABOODLE_DSN=
+DB_STAR_DSN=postgresql+psycopg2://username:password@host
+DB_CABOODLE_DSN=mssql+pyodbc://username:password@host
 
 # CELERY
+# =================================================================
 # BE CAREFUL! These same env variables are used by baserow and conflict
 # CELERY_BROKER_URL=redis://redis:6379/0
 # CELERY_RESULT_BACKEND=redis://redis:6379/0
+
 # HENCE ADD A PREFIX
-CELERY_DASH_BROKER_URL=redis://redis:6379/0
-CELERY_DASH_RESULT_BACKEND=redis://redis:6379/0
+CELERY_DASH_BROKER_URL=redis://localhost:6379/0
+CELERY_DASH_RESULT_BACKEND=redis://localhost:6379/0
+
+# scoping with WEB_ prefix so available when in web.app when background callback manager instantiated
+WEB_CELERY_DASH_BROKER_URL=redis://localhost:6379/0
+WEB_CELERY_DASH_RESULT_BACKEND=redis://localhost:6379/0
+WEB_REDIS_CACHE=redis://localhost:6379/1
