--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,6 +2,7 @@ name: Unit Test Packages
 
 on: [push]
 
+
 jobs:
   continuous-integration:
 
@@ -9,16 +10,23 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
-      - name: Set up Python 3.11.0
+      - name: Set up Python 3.10.10
         uses: actions/setup-python@v4
         with:
-          python-version: "3.11.0"
+          python-version: "3.10.10"
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -e "models[test]"
           pip install -e "web[test]"
           pip install -e "api[test]"
+      - name: Load example .env file
+        uses: xom9ikk/dotenv@v2.2.0
+        with:
+          path: ./
+          mode: example  # should load .env.example
+          load-mode: strict  # should fail if .env.example missing
+
       - name: Test with pytest
         working-directory: ./
         # Ideally we should not need all the environment variables to test.
