--- a/compose.yml
+++ b/compose.yml
@@ -56,8 +56,6 @@ services:
     image: redis:7.0-alpine
     environment:
       <<: *proxy-common
-    ports:
-      - 6379:6379
     networks:
       - hyui
 
@@ -66,7 +64,7 @@ services:
     environment:
       <<: *proxy-common
     ports:
-      - 8309:8001
+      - ${REDISINSIGHT_PORT}:8001
     networks:
       - hyui
     depends_on:
