--- a/.env.example
+++ b/.env.example
@@ -74,3 +74,7 @@ CELERY_DASH_RESULT_BACKEND=redis://localhost:6379/0
 WEB_CELERY_DASH_BROKER_URL=redis://localhost:6379/0
 WEB_CELERY_DASH_RESULT_BACKEND=redis://localhost:6379/0
 WEB_REDIS_CACHE=redis://localhost:6379/1
+
+# User/Password for basic login
+WEB_HYUI_USER=hylode
+WEB_HYUI_PASSWORD=hylode
