Fix mypy errors

--- a/mypy.ini
+++ b/mypy.ini
@@ -5,6 +5,10 @@ python_version = 3.11
 warn_return_any = True
 warn_unused_configs = True
 disallow_untyped_defs = True
+exclude = (?x)(
+    ^cytoscape\.py$    # files named "cytoscape.py"
+  )
+
 
 # Per-module options:
 
