--- a/compose.yml
+++ b/compose.yml
@@ -1,6 +1,6 @@
 x-http-proxy: &http-proxy ${HTTP_PROXY}
 x-https-proxy: &https-proxy ${HTTPS_PROXY}
-x-no-proxy: &no-proxy localhost,127.0.0.1,uclvlddpragae07,uclvlddpragae08,api,web,cache,baserow
+x-no-proxy: &no-proxy localhost,127.0.0.1,uclvlddpragae07,uclvlddpragae08,api,web,baserow
 
 x-proxy-common: &proxy-common
   HTTP_PROXY: *http-proxy
