--- a/web/pyproject.toml
+++ b/web/pyproject.toml
@@ -19,7 +19,9 @@ dependencies = [
     "gunicorn == 20.1.0",
     "pandas == 1.5.1",
     "pydantic == 1.10.2",
-    "requests == 2.28.1"
+    "requests == 2.28.1",
+    "loguru"==0.6.0
+
 ]
 
 [project.optional-dependencies]
