--- a/web/pyproject.toml
+++ b/web/pyproject.toml
@@ -20,7 +20,7 @@ dependencies = [
     "pandas == 1.5.1",
     "pydantic == 1.10.2",
     "requests == 2.28.1",
-    "loguru"==0.6.0
+    "loguru == 0.6.0"
 
 ]
 
