format toml properly

--- a/api/pyproject.toml
+++ b/api/pyproject.toml
@@ -15,7 +15,7 @@ dependencies = [
     "pandas == 1.5.1",
     "pyodbc == 4.0.35",
     "psycopg2-binary == 2.9.5",
-    "pydantic >=1.10.2"<2.0,
+    "pydantic >=1.10.2<2.0",
     "SQLAlchemy == 1.4.41",
     "sqlmodel == 0.0.8",
     "uvicorn[standard] == 0.18.3",
