--- a/web/pyproject.toml
+++ b/web/pyproject.toml
@@ -6,6 +6,7 @@ build-backend = "setuptools.build_meta"
 name = "hyui-web"
 version = "0.0.1"
 dependencies = [
+    "Werkzeug == 2.2.2",
     "Flask == 2.2.2",
     "Flask-Caching == 2.0.1",
     "Flask-Login == 0.6.2",
