--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -25,10 +25,19 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
+      - name: Load example .env file
+        uses: xom9ikk/dotenv@v2.3.0
+        with:
+          path: ./
+          mode: example  # should load .env.example
+          load-mode: strict  # should fail if .env.example missing
+
       - name: Render and Publish
         uses: quarto-dev/quarto-actions/publish@v2
         with:
           path: docs
           # path: source-folder # By default, the current working dir is used i.e `quarto render .`
           target: gh-pages
+          allowEmptyValues: true
+
 
